--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+    <string name="play_button">Play</string>
+    <string name="highscore_button">Highscore</string>
+    <string name="exit_button">Exit</string>
+
     <string name="enable_music">Enable music</string>
     <string name="enable_night_mode">Enable night mode</string>
     <string name="select_language">Select langage</string>
