remove useless fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
 
     <string name="credits">App by Florian Escande</string>
     <string name="features_title">Features :</string>
-    <string name="features">Lorem Ipsum sheeesh</string>
+    <string name="features">Background music, dark theme, language options</string>
 
     <string name="save_score_score">Score : </string>
     <string name="username_input">Enter your username</string>
