--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="highscore_button">Highscore</string>
     <string name="exit_button">Exit</string>
 
+    <string name="confirm">Confirm</string>
+    <string name="answer">Answer</string>
+
     <string name="enable_music">Enable music</string>
     <string name="enable_night_mode">Enable night mode</string>
     <string name="select_language">Select langage</string>
@@ -27,6 +30,9 @@
     <string name="retry">Retry</string>
     <string name="score_display">Score : </string>
     <string name="lives">Lives : </string>
+
+    <string name="game_over">Game Over</string>
+    <string name="final_score">Your final score : </string>
 
     <string name="credits">App by Florian Escande</string>
     <string name="features_title">Features :</string>
