save score en base

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,6 @@
 
     <string name="save_score_score">Score : </string>
     <string name="username_input">Enter your username</string>
+    <string name="username_error">Please enter a username</string>
     <string name="button_save_score">Save score</string>
 </resources>
